fixing dark mode button

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -22,4 +22,9 @@ $code-block-bg-alpha: -.8;
   color: #77b0ed;
   background-color: #181818;
   border-color: white;
-}  
+} 
+/* ------- customize collapsible text -------- */   
+.card {
+  background-color: #181818 !important;
+  border-color: white !important;
+}
